# fwatch

./: .clog.toml  CHANGELOG.md  Cargo.toml  README.md  test_script.pl
src/: fwatch.rs  main.rs  pager.rs  pager2.rs
src/pager/: command_prompt.rs  input.rs  state.rs
