[package]
name = "fwatch"
version = "0.4.0"
authors = ["Eugene Marcotte <emarcotte@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "^0.5.2"
clap = "2.33.0"
ignore = "0.4.8"
os_pipe = "0.9.1"
regex = "1.3.1"
shared_child = "0.3.4"
termion = "1.5.3"
winapi = "0.3.8"

[dependencies.tokio]
version = "^0.2.22"
features = ['full']

[dependencies.inotify]
version = "*"

[dependencies.futures]
version = "^0.3.1"

[dev-dependencies]
tempfile = "3"
